Refectoring initial page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,6 @@
-<h1>Hello, welcome</h1>
+<div class="jumbotron">
+  <h1 class="display-4">Hello, world!</h1>
+  <p class="lead">
+    <%= link_to 'List of friends', friends_url, class: 'btn btn-primary btn-lg' %>
+  </p>
+</div>
