--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -12,6 +12,7 @@
       <th scope="col">E-mail</th>
       <th scope="col">Phone</th>
       <th scope="col">Show</th>
+      <th scope="col">Edit</th>
     </tr>
   </thead>
   <tbody>
@@ -22,6 +23,7 @@
         <td><%= friend.email %></td>
         <td><%= friend.phone %></td>
         <td><%= link_to "Show", friend_url(friend), class: 'btn btn-primary' %></td>
+        <td><%= link_to "Edit", edit_friend_url(friend), class: 'btn btn-primary' %></td>
       </tr>
     <% end %>
   </tbody>
