--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -33,6 +33,10 @@
   </div>
 
   <div class="form-group">
+     <%= form.number_field :user_id, id: :friend_user_id, class:"form-control", value: current_user.id, type: :hidden %>
+  </div>
+
+  <div class="form-group">
     <%= form.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
